--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <figure class="card">
                 <img src="./assets/images/Image 01.png" alt="">
                 <figcaption>
-                    <span>Robótica</span>
-                    <h2>
+                    <span class="content-tag">Robótica</span>
+                    <h2 class="text-2xl">
                         Robôs domésticos começam a ser adotados para tarefas diárias, 
                         prometendo mais conforto e eficiência nas residências.
                     </h2>
@@ -63,5 +63,5 @@
             </div>
         </section>
     </main>
-</body> 
+</body>         
 </html>
