--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <main class="grid container">
-        <div>
+        
         <section id="featured" class="grid grid-flow-col gap-16">
             <figure class="card">
                 <img src="./assets/images/Image 01.png" alt="">
@@ -189,10 +189,11 @@
             </div>
         </section>
 
-        <div id="ads">
+        <aside>
+            <div id="ads">
             <img src="./assets/Ads.png" alt="">
-        </div>
-
+   
+</div>
         <section id="more">
             <header class="grid grid-flow-col">
                 <h3>Viu isso aqui?</h3>
@@ -270,7 +271,8 @@
             </div>
 
         </section>
-        </div>
+    </aside>
+        
     </main>
 </body>         
 </html>
